tmp/inaug1313.cpp.err
./adminaccess/codes/inaug1313.cpp: In function ‘int main()’:
./adminaccess/codes/inaug1313.cpp:5:6: error: no match for ‘operator>>’ (operand types are ‘std::ostream {aka std::basic_ostream<char>}’ and ‘int’)
  cout>>1<<endl;
      ^
In file included from /usr/include/c++/5/string:53:0,
                 from /usr/include/c++/5/bits/locale_classes.h:40,
                 from /usr/include/c++/5/bits/ios_base.h:41,
                 from /usr/include/c++/5/ios:42,
                 from /usr/include/c++/5/ostream:38,
                 from /usr/include/c++/5/iostream:39,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/bits/basic_string.tcc:1441:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/include/c++/5/bits/basic_string.tcc:1441:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/istream:934:0,
                 from /usr/include/c++/5/iostream:40,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/bits/istream.tcc:955:5: note: candidate: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^
/usr/include/c++/5/bits/istream.tcc:955:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/istream:934:0,
                 from /usr/include/c++/5/iostream:40,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/bits/istream.tcc:923:5: note: candidate: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^
/usr/include/c++/5/bits/istream.tcc:923:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/iostream:40:0,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/istream:756:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^
/usr/include/c++/5/istream:756:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/iostream:40:0,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/istream:761:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^
/usr/include/c++/5/istream:761:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/iostream:40:0,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/istream:803:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^
/usr/include/c++/5/istream:803:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout>>1<<endl;
        ^
In file included from /usr/include/c++/5/iostream:40:0,
                 from ./adminaccess/codes/inaug1313.cpp:1:
/usr/include/c++/5/istream:808:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^
/usr/include/c++/5/istream:808:5: note:   template argument deduction/substitution failed:
./adminaccess/codes/inaug1313.cpp:5:8: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout>>1<<endl;
        ^
